--- a/style.css
+++ b/style.css
@@ -38,7 +38,14 @@ h1 {
 
 }
 
+
 .top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
